--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-router-dom":"^5.1.2",
     "react-router-config":"^5.1.1",
     "axios":"^0.19.2",
+    "antd":"^4.4.0",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "@types/react-router":"^5.1.5",
