--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-cli-new",
+  "name": "blog_admin",
   "version": "1.0.0",
-  "description": "react cli",
+  "description": "我的博客后台管理系统",
   "main": "index.js",
   "repository": "git@github.com:jack-team/react-cli-new.git",
   "author": "jacker",
@@ -50,9 +50,15 @@
     "react-router-config":"^5.1.1",
     "axios":"^0.19.2",
     "antd":"^4.4.0",
+    "redux":"^4.0.5",
+    "react-redux":"^7.2.0",
+    "redux-thunk":"^2.3.0",
+    "redux-persist":"^6.0.0",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "@types/react-router":"^5.1.5",
+    "@types/redux-persist": "^4.3.1",
+    "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.4",
     "@types/react-router-config":"^5.0.1"
   },
